--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -40,3 +40,20 @@ main{
     font-size: 20px;
     background-color: whitesmoke;
 }
+
+#form{
+    margin-top: 8%;
+    background-color: whitesmoke;
+    font-size: 28px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+#form input{
+    width: 150px;
+    height: 50px;
+}
+#form #bttn input{
+    width: 150px;
+    height: 50px;
+    margin: 3%;
+}
